remove todo tags from test files

--- a/app/src/test/resources/amazon/3518366823.html
+++ b/app/src/test/resources/amazon/3518366823.html
@@ -10550,7 +10550,7 @@ var instrumentation;!function(){"use strict";var e={568:function(e,t,n){var r=th
               class="a-size-base a-nowrap"><span class="a-size-medium a-color-base"
                                                  data-hook="rating-out-of-text">4,6 von 5</span></span></div></div></div></div><div
               class="a-row a-spacing-medium averageStarRatingNumerical"
-              data-hook="total-review-count"><span class="a-size-base a-color-secondary"><!--TODO: Replace this string with arp-x-ratings 5/22/19 (ShopperExp-5143)-->
+              data-hook="total-review-count"><span class="a-size-base a-color-secondary">
             5.243 globale Bewertungen</span></div><div class="a-fixed-left-grid a-spacing-none"><div
               class="a-fixed-left-grid-inner" style="padding-left:280px"><div
               class="a-fixed-left-grid-col a-col-left"
