--- a/app/src/test/resources/amazon/3518366823-us.html
+++ b/app/src/test/resources/amazon/3518366823-us.html
@@ -6155,7 +6155,7 @@ P.when('mix:@amzn/mix.client-runtime', 'mix:cross-border-widget__jQoC5G4e').exec
     }
 }));
                         </script>
-                        <!-- TODO: Move to custom assets package, tracking backlog SIM: https://issues.amazon.com/issues/V140681098 -->
+
                         <style type="text/css">
     .suggestion-widget-box-border {
           border: 4px #ddd solid !important;
@@ -9966,7 +9966,7 @@ var instrumentation;!function(){"use strict";var e={568:function(e,t,n){var r=th
               class="a-size-base a-nowrap"><span class="a-size-medium a-color-base"
                                                  data-hook="rating-out-of-text">4.6 out of 5</span></span></div></div></div></div><div
               class="a-row a-spacing-medium averageStarRatingNumerical"
-              data-hook="total-review-count"><span class="a-size-base a-color-secondary"><!--TODO: Replace this string with arp-x-ratings 5/22/19 (ShopperExp-5143)-->
+              data-hook="total-review-count"><span class="a-size-base a-color-secondary">
             5,007 global ratings</span></div><div class="a-fixed-left-grid a-spacing-none"><div
               class="a-fixed-left-grid-inner" style="padding-left:280px"><div
               class="a-fixed-left-grid-col a-col-left"
