moved all ISFDB jsoup tests to androidTest

--- a/app/src/androidTest/res/raw/isfdb_11169_multi_edition.html
+++ b/app/src/androidTest/res/raw/isfdb_11169_multi_edition.html
@@ -346,8 +346,13 @@
                             </tr>
                             <tr class="table2">
                                 <td>
-                                    <div class="tooltip tooltipright">1976<sup class="mouseover">&#x24d8;</sup><span
-                                            class="tooltiptext tooltipwide tooltipright">Translated by Ivain Rodriguez de Léon</span>
+                                    <div class="tooltip tooltipright">1976<sup class="mouseover">
+                                        &#x24d8;
+                                    </sup>
+                                        <span
+                                                class="tooltiptext tooltipwide tooltipright">
+                                            Translated by Ivain Rodriguez de Léon
+                                        </span>
                                     </div>
                                 </td>
                                 <td>
@@ -361,8 +366,12 @@
                             </tr>
                             <tr class="table1">
                                 <td>
-                                    <div class="tooltip tooltipright">1982<sup class="mouseover">&#x24d8;</sup><span
-                                            class="tooltiptext tooltipwide tooltipright">Translated by Jürgen Saupe</span>
+                                    <div class="tooltip tooltipright">1982
+                                        <sup class="mouseover">&#x24d8;</sup>
+                                        <span
+                                                class="tooltiptext tooltipwide tooltipright">
+                                            Translated by Jürgen Saupe
+                                        </span>
                                     </div>
                                 </td>
                                 <td>
@@ -855,8 +864,11 @@
                         / Granada</a></td>
                     <td dir="ltr">0-583-12306-6</td>
                     <td dir="ltr">
-                        <div class="tooltip tooltipright">£0.95<sup class="mouseover">?</sup><span
-                                class="tooltiptext tooltipnarrow tooltipright">£: UK pound</span>
+                        <div class="tooltip tooltipright">£0.95
+                            <sup class="mouseover">?</sup>
+                            <span
+                                    class="tooltiptext tooltipnarrow tooltipright">£: UK pound
+                            </span>
                         </div>
                     </td>
                     <td>
@@ -1103,18 +1115,31 @@
                         <a dir="ltr" href="http://www.isfdb.org/cgi-bin/ea.cgi?136">Jack Vance</a>
                     </td>
                     <td dir="ltr">
-                        <div class="tooltip tooltipright"><a dir="ltr"
-                                                             href="http://www.isfdb.org/cgi-bin/publisher.cgi?5719">Bastei
-                            Lübbe</a><sup class="mouseover">?</sup><span
-                                class="tooltiptext tooltipnarrow tooltipright">Bastei Luebbe</span>
+                        <div class="tooltip tooltipright">
+                            <a dir="ltr"
+                               href="http://www.isfdb.org/cgi-bin/publisher.cgi?5719">Bastei
+                                Lübbe
+                            </a>
+                            <sup class="mouseover">?</sup>
+                            <span
+                                    class="tooltiptext tooltipnarrow tooltipright">Bastei Luebbe
+                            </span>
                         </div>
-                        (<a dir="ltr" href="http://www.isfdb.org/cgi-bin/pubseries.cgi?6954">Bastei
-                        Lübbe Science Fiction</a> #24308)
+                        (
+                        <a dir="ltr"
+                           href="http://www.isfdb.org/cgi-bin/pubseries.cgi?6954">Bastei
+                            Lübbe Science Fiction
+                        </a>
+                        #24308)
                     </td>
                     <td dir="ltr">3-404-24308-0</td>
                     <td dir="ltr">
-                        <div class="tooltip tooltipright">€6.90<sup class="mouseover">?</sup><span
-                                class="tooltiptext tooltipnarrow tooltipright">€: Euro</span></div>
+                        <div class="tooltip tooltipright">€6.90
+                            <sup class="mouseover">?</sup>
+                            <span
+                                    class="tooltiptext tooltipnarrow tooltipright">€: Euro
+                            </span>
+                        </div>
                     </td>
                     <td>
                         238
@@ -1141,8 +1166,11 @@
                         / Orion</a></td>
                     <td dir="ltr">978-0-575-10949-0</td>
                     <td dir="ltr">
-                        <div class="tooltip tooltipright">£2.99<sup class="mouseover">?</sup><span
-                                class="tooltiptext tooltipnarrow tooltipright">£: UK pound</span>
+                        <div class="tooltip tooltipright">£2.99
+                            <sup class="mouseover">?</sup>
+                            <span
+                                    class="tooltiptext tooltipnarrow tooltipright">£: UK pound
+                            </span>
                         </div>
                     </td>
                     <td>&nbsp;</td>
@@ -1297,8 +1325,12 @@
                     </td>
                     <td dir="ltr">978-1-61947-233-4</td>
                     <td dir="ltr">
-                        <div class="tooltip tooltipright">€14.00<sup class="mouseover">?</sup><span
-                                class="tooltiptext tooltipnarrow tooltipright">€: Euro</span></div>
+                        <div class="tooltip tooltipright">€14.00
+                            <sup class="mouseover">?</sup>
+                            <span
+                                    class="tooltiptext tooltipnarrow tooltipright">€: Euro
+                            </span>
+                        </div>
                     </td>
                     <td>
                         142
@@ -1330,8 +1362,12 @@
                     </td>
                     <td dir="ltr">978-1-61947-173-3</td>
                     <td dir="ltr">
-                        <div class="tooltip tooltipright">€4.99<sup class="mouseover">?</sup><span
-                                class="tooltiptext tooltipnarrow tooltipright">€: Euro</span></div>
+                        <div class="tooltip tooltipright">€4.99
+                            <sup class="mouseover">?</sup>
+                            <span
+                                    class="tooltiptext tooltipnarrow tooltipright">€: Euro
+                            </span>
+                        </div>
                     </td>
                     <td>&nbsp;</td>
                     <td>
