--- a/app/src/androidTest/res/raw/isfdb_112781.html
+++ b/app/src/androidTest/res/raw/isfdb_112781.html
@@ -269,9 +269,13 @@ License:
                                 href="http://www.isfdb.org/cgi-bin/publisher.cgi?226" dir="ltr">Methuen</a>
                         <li>
                             <b>Price:</b>
-                            <div class="tooltip tooltipright">£1.95<sup
-                                    class="mouseover">?</sup><span
-                                    class="tooltiptext tooltipnarrow tooltipright">£: UK pound</span>
+                            <div class="tooltip tooltipright">£1.95
+                                <sup
+                                        class="mouseover">?
+                                </sup>
+                                <span
+                                        class="tooltiptext tooltipnarrow tooltipright">£: UK pound
+                                </span>
                             </div>
                         <li>
                             <b>Pages:</b> 159
