--- a/app/src/androidTest/res/raw/isfdb_1360173_multi_edition.html
+++ b/app/src/androidTest/res/raw/isfdb_1360173_multi_edition.html
@@ -187,7 +187,10 @@
    <br>
    <b>Type:</b> NOVEL
    <br><b>Language:</b> Dutch
-   <div class="notes"><b>Note:</b> Translated by Ivain Rodriguez de Léon</div>
+   <div class="notes">
+       <b>Note:</b>
+       Translated by Ivain Rodriguez de Léon
+   </div>
    <b>User Rating:</b>
    This title has no votes.
    <a class="inverted bold" dir="ltr"
@@ -283,10 +286,14 @@
       werk van Jack Vance</a> #3)
      </td>
      <td dir="ltr">978-1-61947-233-4</td>
-     <td dir="ltr">
-      <div class="tooltip tooltipright">€14.00<sup class="mouseover">?</sup><span
-              class="tooltiptext tooltipnarrow tooltipright">€: Euro</span></div>
-     </td>
+        <td dir="ltr">
+            <div class="tooltip tooltipright">€14.00
+                <sup class="mouseover">?</sup>
+                <span
+                        class="tooltiptext tooltipnarrow tooltipright">€: Euro
+                </span>
+            </div>
+        </td>
      <td>
       142
      </td>
@@ -312,10 +319,14 @@
       werk van Jack Vance</a> #3)
      </td>
      <td dir="ltr">978-1-61947-173-3</td>
-     <td dir="ltr">
-      <div class="tooltip tooltipright">€4.99<sup class="mouseover">?</sup><span
-              class="tooltiptext tooltipnarrow tooltipright">€: Euro</span></div>
-     </td>
+        <td dir="ltr">
+            <div class="tooltip tooltipright">€4.99
+                <sup class="mouseover">?</sup>
+                <span
+                        class="tooltiptext tooltipnarrow tooltipright">€: Euro
+                </span>
+            </div>
+        </td>
      <td>&nbsp;</td>
      <td>
       <div class="tooltip tooltipright">ebook<sup class="mouseover">?</sup><span
