suppress checks in test data

--- a/app/src/androidTest/res/raw/amazon_1107480558.html
+++ b/app/src/androidTest/res/raw/amazon_1107480558.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<!--suppress ALL -->
 <html lang="pt-pt"
       class="a-no-js"
       data-19ax5a9jf="dingo"><!-- sp:feature:head-start -->
