--- a/app/src/androidTest/res/raw/amazon_captcha.html
+++ b/app/src/androidTest/res/raw/amazon_captcha.html
@@ -1,4 +1,6 @@
-<!doctype html><!--[if lt IE 7]>
+<!doctype html>
+<!--suppress ALL -->
+<!--[if lt IE 7]>
 <html lang="en-us" class="a-no-js a-lt-ie9 a-lt-ie8 a-lt-ie7"> <![endif]--><!--[if IE 7]>
 <html lang="en-us" class="a-no-js a-lt-ie9 a-lt-ie8"> <![endif]--><!--[if IE 8]>
 <html lang="en-us" class="a-no-js a-lt-ie9"> <![endif]--><!--[if gt IE 8]><!-->
