--- a/app/src/androidTest/res/raw/amazon_3518366823_us.html
+++ b/app/src/androidTest/res/raw/amazon_3518366823_us.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<!--suppress ALL -->
 <html lang="en-us"
       class="a-no-js"
       data-19ax5a9jf="dingo"><!-- sp:feature:head-start -->
