--- a/app/src/androidTest/res/raw/bookfinder_9780441020348.html
+++ b/app/src/androidTest/res/raw/bookfinder_9780441020348.html
@@ -8,6 +8,7 @@
 <!--[if IE 9]>
 <html class="no-js ie9" lang="en"> <![endif]-->
 <!--[if gt IE 9]><!-->
+<!--suppress ALL -->
 <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
