--- a/app/src/androidTest/res/raw/isfdb_112781.html
+++ b/app/src/androidTest/res/raw/isfdb_112781.html
@@ -1,24 +1,5 @@
-<!--
-  ~ @Copyright 2018-2022 HardBackNutter
-  ~ @License GNU General Public License
-  ~
-  ~ This file is part of NeverTooManyBooks.
-  ~
-  ~ NeverTooManyBooks is free software: you can redistribute it and/or modify
-  ~ it under the terms of the GNU General Public License as published by
-  ~ the Free Software Foundation, either version 3 of the License, or
-  ~ (at your option) any later version.
-  ~
-  ~ NeverTooManyBooks is distributed in the hope that it will be useful,
-  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
-  ~ See the GNU General Public License for more details.
-  ~
-  ~ You should have received a copy of the GNU General Public License
-  ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  -->
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!--suppress ALL -->
 <html lang="en-us">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=iso-8859-1" >
